[gd_scene load_steps=15 format=2]

[ext_resource path="res://resources/fonts/joystix monospace.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Ending/ending.png" type="Texture" id=2]
[ext_resource path="res://scenes/Ending/bottom.png" type="Texture" id=3]
[ext_resource path="res://scenes/Ending/top.png" type="Texture" id=4]
[ext_resource path="res://scenes/Ending/Ending.gd" type="Script" id=5]
[ext_resource path="res://resources/music/poppy_flower_girls.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/Transition/Transition.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/fonts/joystix.tres" type="DynamicFont" id=8]
[ext_resource path="res://resources/sfx/congrats.ogg" type="AudioStream" id=9]






[sub_resource type="DynamicFont" id=1]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "animate"
length = 35.0
step = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10, 25, 35, 80 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 192 ), Vector2( 0, 44 ), Vector2( 0, 44 ), Vector2( 0, -104 ), Vector2( 0, 44 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Finally,
after a restless fight,
all the nuclear containers
have been secured.

The threat of a nuclear winter
is over and the humankind will
live to see the light of
another day..." ]
}

[sub_resource type="Animation" id=3]
resource_name = "end"
length = 10.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 192 ), Vector2( 0, 44 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "The end" ]
}

[sub_resource type="Animation" id=4]
resource_name = "press"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PressToContinue:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=5]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Ending" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 128, 96 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 192.0
margin_right = 256.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 1 )
text = "The end"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "animate"
anims/animate = SubResource( 2 )
anims/end = SubResource( 3 )
anims/press = SubResource( 4 )

[node name="Top" type="Sprite" parent="."]
position = Vector2( 128, 12 )
texture = ExtResource( 4 )

[node name="Bottom" type="Sprite" parent="."]
position = Vector2( 128, 180 )
texture = ExtResource( 3 )

[node name="PressToContinue" type="Label" parent="."]
visible = false
margin_top = 120.0
margin_right = 256.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.968627, 0.886275, 0.419608, 1 )
text = "Press any key to continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Love4Retro" type="Label" parent="."]
visible = false
margin_top = 176.0
margin_right = 256.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 8 )
text = "2020 love4retro"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CircleTransition" parent="." instance=ExtResource( 7 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="VoicePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="fadeout_finished" from="CircleTransition" to="." method="_on_CircleTransition_fadeout_finished"]
